<resources>
    <!-- Navigace -->
    <string name="app_name">SeenIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_name">User Name</string>
    <string name="navigation_header_email">user@email.com</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_map">Map</string>
    <string name="menu_scan">Scan</string>

    <!-- Toolbar -->
    <string name="activity_detail">Detail</string>
    <string name="activity_sign_in">Sign in</string>

    <!-- Hlasky -->
    <string name="no_stickers_in_area">No stickers found in your area</string>
    <string name="stickers_in_area">Found %1$d stickers in your area</string>
    <string name="sticker_not_collected">You have to collect this sticker to show more information</string>
    <string name="could_not_load_sticker_detail">Detail for sticker could not be loaded</string>
    <string name="could_not_load_stickers_in_area">Stickers in your area could not be loaded</string>
    <string name="could_not_load_overview">Overview could not be loaded</string>
    <string name="could_not_collect_sticker">Sticker could not be collected</string>
    <string name="invalid_sticker">Not a valid sticker, try another one</string>
    <string name="permissions_needed">This functionality will not be available without required permissions. Do you want to grant these permissions now?</string>
    <string name="permissions_not_granted">This functionality is not available because required permissions were not granted</string>
    <string name="sign_in_successful">Successfully signed in</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="shake_detected">Shake detected, closing detail</string>
    <string name="internet_or_location_needed">This functionality requires internet and location services, please turn them on</string>

    <!-- UI -->
    <string name="collected_stickers_stats">You have collected %1$d of %2$d available stickers so far</string>
    <string name="collected_stickers">Collected stickers</string>
    <string name="scan_hint">Place sticker with QR code in the view finder</string>
    <string name="scan_collecting">Collecting sticker</string>

    <!-- Obecne -->
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert">Alert</string>
    <string name="description">Description</string>
    <string name="stats">Stats</string>
    <string name="collected_by">Collected by %1$d%% of users</string>
    <string name="collected_date">Collected on %1$s</string>
    <string name="collected_last_date">Last collected on %1$s</string>
    <string name="placeholder">Placeholder text</string>
    <string name="sign_in_to_continue">Please sign in to continue</string>
    <string name="welcome_to">Welcome to</string>
</resources>
