<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_overview">

    <fragment
        android:id="@+id/nav_overview"
        android:name="cz.uhk.seenit.ui.overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview">
    </fragment>

    <fragment
        android:id="@+id/nav_map"
        android:name="cz.uhk.seenit.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_scan"
        android:name="cz.uhk.seenit.ui.scan.ScanFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_scan" />
</navigation>